--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/hero-avatar.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pavan Kumar | Data Analyst & Python Developer</title>
+    <title>Pavan Rasipogula | Data Analyst & Python Developer</title>
 </head>
 
 <body>
