--- a/index.html
+++ b/index.html
@@ -5,7 +5,27 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/hero-avatar.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- Primary Meta Tags -->
     <title>Pavan Rasipogula | Data Analyst & Python Developer</title>
+    <meta name="title" content="Pavan Rasipogula | Data Analyst & Python Developer">
+    <meta name="description" content="Portfolio of Pavan Rasipogula - A passionate Data Analyst and Python Developer specializing in data-driven insights, automation, and intelligent solutions.">
+    <meta name="keywords" content="Pavan Rasipogula, Data Analyst, Python Developer, Data Science, Machine Learning, Portfolio, Anime Theme, Web Development">
+    <meta name="author" content="Pavan Rasipogula">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://pavanrasipogula.vercel.app/">
+    <meta property="og:title" content="Pavan Rasipogula | Data Analyst & Python Developer">
+    <meta property="og:description" content="Portfolio of Pavan Rasipogula - A passionate Data Analyst and Python Developer specializing in data-driven insights, automation, and intelligent solutions.">
+    <meta property="og:image" content="https://pavanrasipogula.vercel.app/hero-avatar.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://pavanrasipogula.vercel.app/">
+    <meta property="twitter:title" content="Pavan Rasipogula | Data Analyst & Python Developer">
+    <meta property="twitter:description" content="Portfolio of Pavan Rasipogula - A passionate Data Analyst and Python Developer specializing in data-driven insights, automation, and intelligent solutions.">
+    <meta property="twitter:image" content="https://pavanrasipogula.vercel.app/hero-avatar.png">
 </head>
 
 <body>
